--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "~1.15.2",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "request": "~2.75.0",
+    "fs": "0.0.1-security",
+    "jade": "~1.11.0",
+    "r-script": "0.0.3",
+    "request": "~2.78.0",
     "request-promise": "~4.1.1",
     "serve-favicon": "~2.3.0",
-    "jade": "~1.11.0",
-    "body-parser": "~1.15.2",
-    "fs": "0.0.1-security"
+    "wait.for": "~0.6.6"
   }
 }
